--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "react-to-print": "^3.0.5"
   }
 }
